1.on ipad, 3.dropdown, 4.tag, 5.radio, 6.scrollbar all fixed

--- a/src/assets/sass/sections/_sections.scss
+++ b/src/assets/sass/sections/_sections.scss
@@ -459,7 +459,7 @@
         left: 0;
         right: 0;
         z-index: 10;
-        padding-inline: 15px;
+        padding-left: 12px;
         padding-block: 10px;
         overflow-y: auto;
         height: 170px;
@@ -484,7 +484,7 @@
         label {
             display: flex;
             align-items: center;
-            padding: 15px 9px;
+            padding: 15px 14px;
             cursor: pointer;
             border-radius: 6px;
             transition: all ease 0.3s;
